# python-project-50

./: .coverage  .gitignore  Makefile  README.md  cli.py  coverage.xml  generate_diff.py  pyproject.toml  revert  ruff.toml
.github/workflows/: README.md  pyci.yml
gendiff/: consts.py  data.py  dicts_diff.py  diff_with_formatter.py  gendiff.py  generate_diff.py  make_diff_tree.py  parser.py
gendiff/formaters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
gendiff/tests/: file3.json  test_diff.py  test_generate_diff.py
tests/: test_generate_diff_.py
