[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Gendiff. My second project Hexlet school."
authors = ["Andrey <gordienkoas@.bk.ru>"]
readme = "README.md"
packages = [
    { include = "gendiff"}
]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
wemake-python-styleguide = "^0.17.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[dependency-groups]
dev = [
    "ruff>=0.9.4",
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"
