[project]
name = "hexlet-code"
version = "0.1.0"
description = "Gendiff. My second project Hexlet school."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.2",
    "ruff==0.9.7",
]

[tool.poetry.dependencies]
python = ">=3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
wemake-python-styleguide = "^0.17.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[dependency-groups]
dev = [
    "codeclimate-test-reporter>=0.2.3",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pyyaml>=6.0.2",
    "ruff==0.9.7",
]

[tool.ruff]
target-version = "py312"